<resources>
    <string name="app_name">City Tour Planner</string>

    <!--This should have been added by default by firebaseAuth but was not -->
    <string name="default_web_client_id" translatable="false">921658610309-4dhq16mrdgfd45jkrt0vo9hmlr1m4ju7.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Scheduled</string>
    <string name="tab_text_2">Past</string>
    <string name="tab_text_3">Trash</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_new_trip_creation">Create a new trip</string>
    <string name="newTrip_searchView_hint">Search for a city here</string>
    <string name="googlePlacesAPIKey">AIzaSyBrqqD2yEMKBRABm-3hFUzZy3xzZ-hI-to</string>
    <string name="permission_not_granted_message">Need to enable the required permissions to proceed</string>
    <string name="splash_image_description">Splash screen image</string>
    <string name="trip_name_hint">Give your trip a name</string>
    <string name="trip_date_hint">Choose the date of your trip</string>
    <string name="trip_city_hint">Select a city</string>
    <string name="start_trip_button_title">Start creating trip</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="place_details_imageview_desc">Place Details ImageView</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_place_search">Place Search</string>
    <string name="about_dialog_text">City Tour Planner is a trip planning application developed in fulfillment of the Final Project requirement at the University of Leicester. The project is supervised by Dr. Rayna Dimitrova and Dr. Reiko Heckel is the second marker.</string>
    <string name="nav_drawer_open">Drawer Open</string>
    <string name="nav_drawer_close">Drawer close</string>
    <string name="title_activity_edit_trip_headers">Edit Trip Name and Date</string>

    <!--String resources for settings page-->
    <string name="pref_user_profile_title">Profile Settings</string>
    <string name="pref_user_profile_summary">Manage your account</string>
    <string name="pref_trips_title">Trip Preferences</string>
    <string name="pref_trips_summary">Manage preferences for trips</string>
    <string name="pref_displayname_title">Display Name</string>
    <string name="pref_email_title">Email</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_accountdel_title">Delete your account</string>
    <string name="pref_accountdel_summary">This action is permanent and cannot be undone. Saved user data will also be deleted.</string>
    <string name="pref_email_summary">Edit your account email address</string>
    <string name="pref_password_summary">Change the password you use to login to the application</string>
    <string name="pref_displayname_summary">Edit your display name</string>
    <string name="pref_delete_account_title">Delete Account</string>
    <string name="place_category_title">Select a place category</string>
    <string name="place_category_summary">Restricts retrieved places to only the selected type</string>
    <string name="place_category_dialogtitle">Place Categories</string>
    <string name="custom_places_switch_title">Retrieve Custom Places</string>
    <string name="custom_places_switch_summary">Allows you to retrieve a specific category of places</string>

    <string-array name="place_category_entries">
        <item>Point of Interest</item>
        <item>Museum</item>
        <item>Parks</item>
        <item>Hotels</item>
        <item>Art Galleries</item>
    </string-array>

    <string-array name="place_category_entryvalues">
        <item>point_of_interest</item>
        <item>museum</item>
        <item>park</item>
        <item>restaurant</item>
        <item>cinemas</item>
        <item>art_gallery</item>
    </string-array>
    <string name="title_activity_update_password">Update Password</string>
    <string name="title_activity_update_email">UpdateEmail</string>
    <string name="title_activity_itinarary">Trip Places</string>
    <string name="title_activity_manage_duration">Manage Place Durations</string>

</resources>
