<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">



    <header
        android:fragment="uk.ac.le.cityTourPlanner.SettingsFragment"
        android:title="@string/pref_user_profile_title"
        android:summary="@string/pref_user_profile_summary"
        android:icon="@drawable/ic_userprofile_prefs">

        <!--pass parameters to fragment -->
        <extra
            android:name="settings"
            android:value="userprofile"/>

    </header>

    <header
        android:fragment="uk.ac.le.cityTourPlanner.SettingsFragment"
        android:title=  "@string/pref_trips_title"
        android:summary="@string/pref_trips_summary"
        android:icon="@drawable/ic_trips_prefs">

        <!--pass parameters to fragment -->
        <extra
            android:name="settings"
            android:value="trips"/>

</header>

</preference-headers>